[package]
name = "mocknet"
version = "0.1.1"
edition = "2018"
authors = ["duanjp8617 <duanjp8617@gmail.com>"]
description = "MockNet backend implementation"

#[[bin]]
#name = "server_main"
#path = "src/bins/server_main.rs"

#[[bin]]
#name = "server_check"
#path = "src/bins/server_check.rs"

[[bin]]
name = "emunet_server"
path = "src/bins/emunet_server.rs"

[dependencies]
tonic = "0.4.0"
tokio = { version = "1.0", features = ["full"] }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde"] }
indradb-lib = { version = "2.1.0", features = ["rocksdb-datastore", "sled-datastore"] }
indradb-proto = { version = "2.1.0", features = ["client"] }