[package]
name = "mocknet"
version = "0.1.1"
edition = "2018"
authors = ["duanjp8617 <duanjp8617@gmail.com>"]
description = "MockNet backend implementation"

#[[bin]]
#name = "server_check"
#path = "src/bins/server_check.rs"

[[bin]]
name = "mocknet_server"
path = "src/bins/mocknet_server.rs"

[[bin]]
name = "api_mockserver"
path = "src/bins/api_mockserver.rs"

[dependencies]
tonic = "0.4.0"
prost = "0.7"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde"] }
indradb-lib = { version = "2.1.0", features = ["rocksdb-datastore", "sled-datastore"] }
indradb-proto = { version = "2.1.0", features = ["client"] }
lazy_static = "1.4.0"
clap = "2.0"

[build-dependencies]
tonic-build = "0.4"